<!--
    Copyright 2016 Abner Moises dos Santos Gomes

    This file is part of Ciência Interativa.

    Ciência Interativa is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Foobar is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <!-- Definições Básicas -->
    <string name="app_name">Ciência Interativa</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_agua">AguaActivity</string>
    <string name="title_activity_cadastro">CadastroActivity</string>
    <string name="title_activity_historico">HistoricoActivity</string>
    <string name="title_activity_ciclo_agua">CicloAguaActivity</string>
    <string name="title_activity_consumo_agua">ConsumoAguaActivity</string>
    <string name="title_activity_poluicao_agua">PoluicaoAguaActivity</string>
    <string name="title_activity_alunos">AlunosActivity</string>
    <string name="title_activity_evaporacao">EvaporacaoActivity</string>
    <string name="title_activity_condensacao">CondensacaoActivity</string>
<<<<<<< HEAD
    <string name="id_video">031Lv99kEg4</string>
=======
    <string name="id_video">_hAz2-1jTvs</string>

>>>>>>> origin/master

    <!-- Definições de Botões -->
    <string name="novo_usuario">Novo Usuário</string>
    <string name="texto_botao_enviar">Salvar</string>
    <string name="texto_botao_ver_alunos">Ver Cadastrados</string>
    <string name="texto_botao_historico">Histórico</string>
    <string name="texto_botao_agua">Água</string>
    <string name="texto_botao_astros">Astros e Estrelas</string>
    <string name="texto_botao_sentidos">Cinco Sentidos</string>
    <string name="texto_botao_fotossintese">Fotossíntese</string>
    <string name="texto_botao_luz">Luz e Sombra</string>
    <string name="texto_botao_reciclagem">Reciclagem</string>
    <string name="texto_botao_ciclo_agua">Ciclo da Água</string>
    <string name="texto_botao_consumo_agua">Consumo</string>
    <string name="texto_botao_poluicao_agua">Poluição</string>
    <string name="texto_botao_continuar">Continuar</string>
    <string name="texto_botao_repetir">Tente Novamente</string>

    <!-- Definições de Textos e Títulos -->
    <string name="texto_assunto">Selecione um Assunto</string>
    <string name="texto_info_aluno">Informações sobre o Aluno</string>
    <string name="texto_nome">Nome</string>
    <string name="texto_nascimento">Data de Nascimento</string>
    <string name="texto_turma">Turma</string>
    <string name="texto_parabens">Parabéns! Você acertou. Vamos para o próximo?</string>
    <string name="texto_tente_novamente">Que pena! Vamos tentar novamente?</string>

    <!-- Definições Questionários -->
    <string name="questao_evaporacao">COM MINHA AJUDA, A ÁGUA EVAPORA. QUERO VER VOCÊ ADIVINHAR QUEM EU SOU AGORA!</string>
    <string name="questao_condensacao">EU SÓ APAREÇO QUANDO A ÁGUA EVAPORA. TENTE DESCOBRIR ESSA CHARADA AGORA!</string>
    <string name="questao_precipitacao">PARA CHOVER, EU PRECISO APARECER. QUEM SOU EU?</string>

    <!-- Definições de Popups -->
    <string name="popup">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sit amet turpis ac
        urna placerat porta eget ut enim. Donec eget hendrerit risus. Pellentesque eleifend
        tristique nibh in consequat. Ut vel magna non dolor venenatis facilisis.
    </string>
    <string name="title_activity_precipitacao">PrecipitacaoActivity</string>
<<<<<<< HEAD
    <string name="title_activity_evaporacao_offline">EvaporacaoOfflineActivity</string>
    <string name="title_activity_video_teste">VideoTeste</string>
    <string name="title_activity_condensacao_offline">CondensacaoOfflineActivity</string>
    <string name="title_activity_precipitacao_offline">PrecipitacaoOfflineActivity</string>
=======
>>>>>>> origin/master

</resources>
