<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/fundo"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginTop="7dp"
                android:layout_gravity="center"
                android:background="@drawable/screen_border_layout"
                android:orientation="vertical" >

                <TextView
                    android:text="@string/texto_info_aluno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_gravity="center"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <Button android:id="@+id/bt_add_aluno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:drawableLeft="@drawable/ic_user_add"
                    android:background="@drawable/botao"
                    android:text="@string/novo_usuario"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:onClick="onClickCadastro"/>

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/botao"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:hint="Clique para selecionar o aluno" />

                <Button android:id="@+id/bt_historico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/botao"
                    android:text="@string/texto_botao_historico"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:onClick="onClickHistorico"/>

            </LinearLayout>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:background="@drawable/screen_border_layout"
                android:orientation="vertical">

                <TextView
                    android:text="@string/texto_assunto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_gravity="center"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <Button android:id="@+id/bt_acessar_agua"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/botao"
                    android:text="@string/texto_botao_agua"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:onClick="onClickAgua"/>

                <Button android:id="@+id/bt_acessar_astros"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/botao"
                    android:text="@string/texto_botao_astros"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:onClick="onClickAstros"/>

                <Button android:id="@+id/bt_acessar_sentidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/botao"
                    android:text="@string/texto_botao_sentidos"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:onClick="onClickSentidos"/>

                <Button android:id="@+id/bt_acessar_fotossintese"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/botao"
                    android:text="@string/texto_botao_fotossintese"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:onClick="onClickFotossintese"/>

                <Button android:id="@+id/bt_acessar_luz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/botao"
                    android:text="@string/texto_botao_luz"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:onClick="onClickLuz"/>

                <Button android:id="@+id/bt_acessar_reciclagem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/botao"
                    android:text="@string/texto_botao_reciclagem"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:onClick="onClickReciclagem"/>

                <TextView
                    android:text="@string/texto_assunto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    android:textColor="#FFFFFF"
                    android:textSize="5sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>