<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/background_floating_material_light"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="2dp"
        android:layout_gravity="center"
        android:background="@drawable/screen_border_layout"
        android:orientation="vertical" >

        <TextView
            android:text="@string/texto_assunto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button android:id="@+id/bt_ciclo_agua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/botao"
            android:text="@string/texto_botao_ciclo_agua"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"
            android:onClick="onClickCiclo"/>

        <Button android:id="@+id/bt_consumo_agua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/botao"
            android:text="@string/texto_botao_consumo_agua"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"
            android:onClick="onClickConsumo"/>

        <Button android:id="@+id/bt_poluicao_agua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/botao"
            android:text="@string/texto_botao_poluicao_agua"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"
            android:onClick="onClickPoluicao"/>
    </LinearLayout>
</LinearLayout>
