<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/fundo"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_gravity="center"
        android:background="@drawable/screen_border_layout"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/texto_nome"
            android:textColor="#FFFFFF"
            android:textSize="16sp" >
        </TextView>

        <EditText
            android:id="@+id/edtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="16sp" >
        </EditText>

        <TextView
            android:id="@+id/txtNascimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_nascimento"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:layout_marginTop="2dp" >
        </TextView>

        <EditText
            android:id="@+id/edtNascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:hint="10/10/2010" >
        </EditText>

        <TextView
            android:id="@+id/txtTurma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_turma"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:layout_marginTop="2dp" >
        </TextView>

        <EditText
            android:id="@+id/edtTurma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="16sp" >
        </EditText>

        <TextView
            android:text="@string/texto_assunto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:textColor="#FFFFFF"
            android:textSize="5sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>
