<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.edu.ifspsaocarlos.sdm.cienciasdown.View.EvaporacaoActivity"
    android:background="@drawable/screen_border_layout">

    <!--VideoView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/videoViewEvaporacao"
        android:layout_marginRight="335dp"
        android:layout_marginEnd="335dp"
        android:layout_marginBottom="166dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" /-->

    <com.google.android.youtube.player.YouTubePlayerView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/youtubeEvaporacao"
        android:layout_marginRight="315dp"
        android:layout_marginEnd="315dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="123dp" />

    <TextView
        android:id="@+id/txtEvapParabens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_parabens"
        android:layout_alignParentTop="true"
        android:visibility="invisible"
        android:layout_alignRight="@+id/rdgEvaporacao"
        android:layout_alignEnd="@+id/rdgEvaporacao"
        android:layout_marginTop="31dp">
    </TextView>

    <Button android:id="@+id/bt_evap_continuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/botao"
        android:visibility="invisible"
        android:text="@string/texto_botao_continuar"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_alignTop="@+id/bt_evap_repetir"
        android:layout_alignLeft="@+id/bt_evap_repetir"
        android:layout_alignStart="@+id/bt_evap_repetir"
        android:layout_alignRight="@+id/bt_evap_repetir"
        android:layout_alignEnd="@+id/bt_evap_repetir"
        android:onClick="onClickContinuar"/>

    <TextView
        android:id="@+id/txtEvapRepetir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/texto_tente_novamente"
        android:layout_alignTop="@+id/txtEvapParabens"
        android:layout_toRightOf="@+id/txtQuestãoEvaporacao"
        android:layout_toEndOf="@+id/txtQuestãoEvaporacao">
    </TextView>

    <Button android:id="@+id/bt_evap_repetir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/botao"
        android:visibility="invisible"
        android:text="@string/texto_botao_repetir"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/txtEvapRepetir"
        android:layout_alignEnd="@+id/txtEvapRepetir"
        android:onClick="onClickRepetir" />

    <TextView
        android:id="@+id/txtQuestãoEvaporacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questao_evaporacao"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="87dp">
    </TextView>

    <RadioGroup
        android:id="@+id/rdgEvaporacao"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_alignTop="@+id/txtQuestãoEvaporacao"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="44dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/opEvapSol"
            android:drawableRight="@drawable/sol" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/opEvapCasa"
            android:drawableRight="@drawable/casa" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/opEvapPeixe"
            android:drawableRight="@drawable/peixe" />
    </RadioGroup>
</RelativeLayout>
